--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,7 +4,7 @@
     <div class="row mb-3">
       <div class="col-8 offset-2">
         <h3>Edit your Listing</h3>
-        <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation">
+        <form method="POST" action="/listings/<%= listing._id %>?_method=PUT" novalidate class="needs-validation " enctype="multipart/form-data">
           <div class="mb-3"></div>
           <label for="title" class="form-label">Title</label>
           <input name="listing[title]" value="<%= listing.title %>" type="text"  class="form-control"required/>
@@ -22,9 +22,14 @@
             </div>
       </div>
 
-      <div class="mb-3"></div>
-      <label for="image" class="form-label">Image link</label>
-      <input name="listing[image]" value="<%= listing.image %>" type="text"  class="form-control" />
+      <!-- <div class="mb-3" >
+       Original Listing Image<br>
+        <img src="<%=listing.image.url%>" height="1.5rem" width="1.5rem"  alt="image">
+      </div> -->
+
+      <div class="mb-3">
+      <label for="image" class="form-label">Upload new Image </label>
+      <input name="listing[image]" type="file"  class="form-control" />
      
     </div>
   <div class="row">
