--- a/public/style.css
+++ b/public/style.css
@@ -75,6 +75,7 @@
    }
    .card-text p{
       font-weight: 400 !important;
+      
    }
 
    .listing-link{
@@ -109,3 +110,5 @@
    padding-left: 0%;
    padding-right: 0%;
 }
+
+#map {height: 400px; width: 80vh; }
