--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,29 +1,135 @@
 <% layout("/layouts/boilerplate") %>
 
-  
-    <h3>All Listings</h3>
-    <!--<form method="GET" action="/listings/new">
-      <button>Create New Listing</button>
-    </form>-->
+  <style>
+   #filters{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+   }
+   .filter{
+    text-align: center;
+    margin-right: 2rem;
+    margin-top: 2rem;
+    opacity: 0.7;
+   }
+   .filter:hover{
+    opacity: 1.2;
+    cursor:pointer;
 
+   }
+   .tax-info{
+    display: none;
+   }
+   .tax-toggle{
+    border: 1px solid black;
+    border-radius: 1rem;
+    height: 3rem;
+    padding: 1rem;
+    margin-left: 5rem;
+  display: flex; 
+  align-items: center;
+  }
+  </style>
+    
+    <div id="filters">
+      <div class="filter">
+      <div><i class="fa-solid fa-fire"></i> </div>
+      <p>Trending</p>
+      </div>
+      <div class="filter">
+      <div><i class="fa-solid fa-bed"></i> </div>
+      <p>Rooms</p>
+      </div>
+      <div class="filter">
+      <div><i class="fa-solid fa-city"></i></div>
+      <p>Iconic cities</p>
+      </div>
+      <div class="filter">
+      <div><i class="fa-solid fa-mountain"></i> </div>
+      <p>Mountain</p>
+      </div>
+      <div class="filter">
+      <div><i class="fa-solid fa-chess-rook"></i> </div>
+      <p>Castle</p>
+      </div>
+      <div class="filter">
+      <div><i class="fa-solid fa-person-swimming"></i> </div>
+      <p>Amazing Pool</p>
+      </div>
+      <div class="filter">
+      <div><i class="fa-solid fa-cow"></i> </div>
+      <p>Farm</p>
+      </div>
+      <div class="filter">
+      <div><i class="fa-solid fa-wine-bottle"></i> </div>
+      <p>Bar</p>
+      </div>
+      <div class="filter">
+      <div><i class="fa-brands fa-docker"></i> </div>
+      <p>Fish Show</p>
+      </div>
+      <div class="filter">
+      <!-- <div><i class="fa-brands fa-dribbble"></i> </div>
+      <p>BasketBoll</p>
+      </div> -->
+      <!-- <div class="filter">
+      <div><i class="fa-solid fa-trophy"></i> </div>
+      <p>Sports</p>
+      </div> -->
+        <!-- <div class="filter">
+      <div>  <i class="fa-solid fa-umbrella"></i></div>
+      <p>Beach</p>
+      </div>
+    
+       <div class="filter">
+      <div> <i class="fa-solid fa-wifi"></i></div>
+      <p>Wifi</p>
+      </div> -->
+   <div class="tax-toggle">
+    <div class="form-check-reverse form-switch">
+  <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
+  <label class="form-check-label" for="switchCheckDefault">Display total after taxes</label>
+</div>
+   </div>
+      <!-- </div> -->
+    </div>
+
+    <hr>
+<div class="container mt-4">
     <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1"> 
        <% for(let listing of allListings) { %>
-          
+          <div class="col"> 
       <div class="card cols listing-card" >
       <a href="/listings/<%=listing._id%>" class="listing-link">
-        <img class="card-img-top" src="<%- listing.image %>" alt="listing-image" style="height: 20rem;">
+        <img class="card-img-top" src="<%- listing.image.url %>" alt="listing-image" style="height: 20rem;">
         <div class="card-img-overlay"></div>
         <div class="card-body">
           <p class="card-text">
             <b><%= listing.title%></b>
             <br>
-            &#8377; <%=listing.price%>
+            &#8377; <%=listing.price.toLocaleString("en-IN")%> / night
+            <i class="tax-info">    &nbsp; &nbsp; +18% GST</i>
           </p>
         </div>
         </a>
+        </div>
       </div>
       <% } %>
+    </div>
     </div>
    
         
   
+    <script>
+      let taxSwitch=document.getElementById("switchCheckDefault");
+      taxSwitch.addEventListener("click",()=>{
+     let taxInfo=document.getElementsByClassName("tax-info")
+     for(info of taxInfo){
+      if(info.style.display!= "inline"){
+        info.style.display='inline';
+      }else{
+        info.style.display='none';
+      }
+     }
+      })
+    </script>
