--- a/views/new.ejs
+++ b/views/new.ejs
@@ -5,7 +5,7 @@
       <div class="col-8 offset-2">
      
         <h3>Create a New Listing</h3>
-        <form method="POST" action="/listings"  class="needs-validation"  novalidate>
+        <form method="POST" action="/listings"  class="needs-validation"  novalidate enctype="multipart/form-data">
           <div class="mb-3">
             <label for="title" class="form-label">Title</label>
             <input name="listing[title]" placeholder="Enter title" type="text" class="form-control" required/>
@@ -21,9 +21,14 @@
               Please enter a short description
             </div>
           </div>
-        <div class="mb-3">
+        <!-- <div class="mb-3">
             <label for="image" class="form-label">Image</label>
             <input name="listing[image]" placeholder="enter image URL/Link" type="text" class="form-control" />
+        </div> -->
+        <div class="mb-3">
+            <label for="image" class="form-label">Upload Listing Image</label>
+            <input name="listing[image]" placeholder="enter image URL/Link" type="file" class="form-control" />
+            required
         </div>
 
           <div class="row">
