add owner to listings

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -13,6 +13,8 @@
         <img class="card-img-top show-img" src="<%=listing.image.url%>" alt="Card image cap">
         <div class="card-body">
            <p class="card-text">Owned By <i><%= listing.owner.username %></i></p>
+           <% console.log(listing.owner.username);
+            %>
           <p class="card-text">
             <%= listing.description %></p>  
             <p class="card-text"> &#8377;<%= listing.price.toLocaleString("en-IN")%></p>
